gen/HTMLParser.java
// Generated from C:/Users/Raghad/Desktop/Compiler/html-compiler/src\HTMLParser.g4 by ANTLR 4.8
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, CONDITIONAL_COMMENT=2, XML=3, CDATA=4, DTD=5, SCRIPTLET=6, 
		SEA_WHITESPACE=7, SEA_TEXT=8, SEA_OPENING_CURLY_BRACE=9, SCRIPT_START_TAG=10, 
		STYLE_START_TAG=11, OPENING_TAG=12, DOUBLE_OPENING_CURLY_BRACES=13, SCRIPT_BODY=14, 
		SCRIPT_SHORT_BODY=15, STYLE_BODY=16, STYLE_SHORT_BODY=17, CP_APP=18, CP_SHOW=19, 
		CP_HIDE=20, CP_IF=21, EVENT_LISTENER=22, CP_MODEL=23, CP_FOR=24, CP_SWITCH=25, 
		CP_SWITCH_CASE=26, CP_SWITCH_DEFAULT=27, COMPONENT_NAME=28, HTML_ATTRIBUTE_EQUALS=29, 
		TAG_WHITESPACE=30, TAG_SLASH=31, CLOSING_TAG=32, DIRECTIVE_EQUALS=33, 
		TRANSITION_WHITESPACE=34, OPENING_DOUBLE_QUOTES=35, DOT=36, COMMA=37, 
		COLON=38, SEMICOLON=39, OPENING_PARENTHESES=40, CLOSING_PARENTHESES=41, 
		OPENING_BRACKET=42, CLOSING_BRACKET=43, OPENING_BRACE=44, CLOSING_BRACE=45, 
		QUESTION_MARK=46, PIPE=47, ASSIGNMENT=48, IN=49, TRUE=50, FALSE=51, INDEX=52, 
		AND=53, OR=54, XOR=55, NOT=56, PLUS=57, MINUS=58, MULTIPLICATION=59, DIVISION=60, 
		MODULUS=61, GREATER=62, SMALLER=63, GREATER_EQUALS=64, SMALLER_EQUALS=65, 
		EQUALITY=66, STRICT_EQUALITY=67, INEQUALITY=68, STRICT_INEQUALITY=69, 
		IDENTIFIER=70, NUMBER=71, STRING_LITERAL=72, IN_EXPRESSION_WHITESPACE=73, 
		CLOSING_DOUBLE_QUOTES=74, DOUBLE_CLOSING_CURLY_BRACES=75, ATTRIBUTE_VALUE=76, 
		VALUE=77;
	public static final int
		RULE_document = 0, RULE_element = 1, RULE_attribute = 2, RULE_htmlAttribute = 3, 
		RULE_directive = 4, RULE_expression = 5, RULE_objectLiteral = 6, RULE_properties = 7, 
		RULE_property = 8, RULE_arrayLiteral = 9, RULE_arrayElements = 10, RULE_booleanExpression = 11, 
		RULE_booleanValue = 12, RULE_booleanOperator = 13, RULE_equalityOperator = 14, 
		RULE_comparisonOperator = 15, RULE_arithmeticExpression = 16, RULE_numericValue = 17, 
		RULE_arithmeticOperator = 18, RULE_assignmentExpression = 19, RULE_ternaryOperator = 20, 
		RULE_objectChainedMembers = 21, RULE_objectMember = 22, RULE_arrayElement = 23, 
		RULE_arrayName = 24, RULE_arrayElementIndex = 25, RULE_functionCall = 26, 
		RULE_functionArguments = 27, RULE_forLoop = 28, RULE_arrayDataSource = 29, 
		RULE_switchE = 30, RULE_switchAttribute = 31, RULE_switchCase = 32, RULE_switchCaseAttribute = 33, 
		RULE_content = 34, RULE_text = 35, RULE_dataBindingExpression = 36, RULE_interpolatedExpression = 37, 
		RULE_filters = 38, RULE_filter = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "element", "attribute", "htmlAttribute", "directive", "expression", 
			"objectLiteral", "properties", "property", "arrayLiteral", "arrayElements", 
			"booleanExpression", "booleanValue", "booleanOperator", "equalityOperator", 
			"comparisonOperator", "arithmeticExpression", "numericValue", "arithmeticOperator", 
			"assignmentExpression", "ternaryOperator", "objectChainedMembers", "objectMember", 
			"arrayElement", "arrayName", "arrayElementIndex", "functionCall", "functionArguments", 
			"forLoop", "arrayDataSource", "switchE", "switchAttribute", "switchCase", 
			"switchCaseAttribute", "content", "text", "dataBindingExpression", "interpolatedExpression", 
			"filters", "filter"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'{{'", null, null, null, null, "'cp-app'", "'cp-show'", "'cp-hide'", 
			"'cp-if'", null, "'cp-model'", "'cp-for'", "'cp-switch'", "'cp-switch-case'", 
			"'cp-switch-default'", null, null, null, null, null, null, null, null, 
			"'.'", "','", "':'", "';'", "'('", "')'", "'['", "']'", null, "'}'", 
			"'?'", "'|'", null, "'in'", "'true'", "'false'", "'index'", null, null, 
			null, null, "'+'", "'-'", "'*'", null, "'%'", null, null, "'>='", "'<='", 
			"'=='", "'==='", "'!='", "'!=='", null, null, null, null, null, "'}}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "CONDITIONAL_COMMENT", "XML", "CDATA", "DTD", "SCRIPTLET", 
			"SEA_WHITESPACE", "SEA_TEXT", "SEA_OPENING_CURLY_BRACE", "SCRIPT_START_TAG", 
			"STYLE_START_TAG", "OPENING_TAG", "DOUBLE_OPENING_CURLY_BRACES", "SCRIPT_BODY", 
			"SCRIPT_SHORT_BODY", "STYLE_BODY", "STYLE_SHORT_BODY", "CP_APP", "CP_SHOW", 
			"CP_HIDE", "CP_IF", "EVENT_LISTENER", "CP_MODEL", "CP_FOR", "CP_SWITCH", 
			"CP_SWITCH_CASE", "CP_SWITCH_DEFAULT", "COMPONENT_NAME", "HTML_ATTRIBUTE_EQUALS", 
			"TAG_WHITESPACE", "TAG_SLASH", "CLOSING_TAG", "DIRECTIVE_EQUALS", "TRANSITION_WHITESPACE", 
			"OPENING_DOUBLE_QUOTES", "DOT", "COMMA", "COLON", "SEMICOLON", "OPENING_PARENTHESES", 
			"CLOSING_PARENTHESES", "OPENING_BRACKET", "CLOSING_BRACKET", "OPENING_BRACE", 
			"CLOSING_BRACE", "QUESTION_MARK", "PIPE", "ASSIGNMENT", "IN", "TRUE", 
			"FALSE", "INDEX", "AND", "OR", "XOR", "NOT", "PLUS", "MINUS", "MULTIPLICATION", 
			"DIVISION", "MODULUS", "GREATER", "SMALLER", "GREATER_EQUALS", "SMALLER_EQUALS", 
			"EQUALITY", "STRICT_EQUALITY", "INEQUALITY", "STRICT_INEQUALITY", "IDENTIFIER", 
			"NUMBER", "STRING_LITERAL", "IN_EXPRESSION_WHITESPACE", "CLOSING_DOUBLE_QUOTES", 
			"DOUBLE_CLOSING_CURLY_BRACES", "ATTRIBUTE_VALUE", "VALUE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DocumentContext extends ParserRuleContext {
		public List<TerminalNode> SCRIPTLET() { return getTokens(HTMLParser.SCRIPTLET); }
		public TerminalNode SCRIPTLET(int i) {
			return getToken(HTMLParser.SCRIPTLET, i);
		}
		public TerminalNode XML() { return getToken(HTMLParser.XML, 0); }
		public TerminalNode DTD() { return getToken(HTMLParser.DTD, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(80);
					match(SCRIPTLET);
					}
					} 
				}
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==XML) {
				{
				setState(86);
				match(XML);
				}
			}

			setState(92);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(89);
					match(SCRIPTLET);
					}
					} 
				}
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DTD) {
				{
				setState(95);
				match(DTD);
				}
			}

			setState(101);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(98);
					match(SCRIPTLET);
					}
					} 
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCRIPTLET) | (1L << SCRIPT_START_TAG) | (1L << STYLE_START_TAG) | (1L << OPENING_TAG))) != 0)) {
				{
				{
				setState(104);
				element();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
	 
		public ElementContext() { }
		public void copyFrom(ElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ScriptletElementContext extends ElementContext {
		public TerminalNode SCRIPTLET() { return getToken(HTMLParser.SCRIPTLET, 0); }
		public ScriptletElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterScriptletElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitScriptletElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitScriptletElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SwitchElementContext extends ElementContext {
		public SwitchEContext switchE() {
			return getRuleContext(SwitchEContext.class,0);
		}
		public SwitchElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterSwitchElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitSwitchElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitSwitchElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NonVoidElementContext extends ElementContext {
		public List<TerminalNode> OPENING_TAG() { return getTokens(HTMLParser.OPENING_TAG); }
		public TerminalNode OPENING_TAG(int i) {
			return getToken(HTMLParser.OPENING_TAG, i);
		}
		public List<TerminalNode> COMPONENT_NAME() { return getTokens(HTMLParser.COMPONENT_NAME); }
		public TerminalNode COMPONENT_NAME(int i) {
			return getToken(HTMLParser.COMPONENT_NAME, i);
		}
		public List<TerminalNode> CLOSING_TAG() { return getTokens(HTMLParser.CLOSING_TAG); }
		public TerminalNode CLOSING_TAG(int i) {
			return getToken(HTMLParser.CLOSING_TAG, i);
		}
		public TerminalNode TAG_SLASH() { return getToken(HTMLParser.TAG_SLASH, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public NonVoidElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterNonVoidElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitNonVoidElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitNonVoidElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ScriptElementContext extends ElementContext {
		public TerminalNode SCRIPT_START_TAG() { return getToken(HTMLParser.SCRIPT_START_TAG, 0); }
		public TerminalNode SCRIPT_BODY() { return getToken(HTMLParser.SCRIPT_BODY, 0); }
		public TerminalNode SCRIPT_SHORT_BODY() { return getToken(HTMLParser.SCRIPT_SHORT_BODY, 0); }
		public ScriptElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterScriptElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitScriptElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitScriptElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VoidElementContext extends ElementContext {
		public TerminalNode OPENING_TAG() { return getToken(HTMLParser.OPENING_TAG, 0); }
		public TerminalNode COMPONENT_NAME() { return getToken(HTMLParser.COMPONENT_NAME, 0); }
		public TerminalNode TAG_SLASH() { return getToken(HTMLParser.TAG_SLASH, 0); }
		public TerminalNode CLOSING_TAG() { return getToken(HTMLParser.CLOSING_TAG, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public VoidElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterVoidElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitVoidElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitVoidElement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StyleElementContext extends ElementContext {
		public TerminalNode STYLE_START_TAG() { return getToken(HTMLParser.STYLE_START_TAG, 0); }
		public TerminalNode STYLE_BODY() { return getToken(HTMLParser.STYLE_BODY, 0); }
		public TerminalNode STYLE_SHORT_BODY() { return getToken(HTMLParser.STYLE_SHORT_BODY, 0); }
		public StyleElementContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterStyleElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitStyleElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitStyleElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		int _la;
		try {
			int _alt;
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new NonVoidElementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				match(OPENING_TAG);
				setState(111);
				match(COMPONENT_NAME);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CP_APP) | (1L << CP_SHOW) | (1L << CP_HIDE) | (1L << CP_IF) | (1L << EVENT_LISTENER) | (1L << CP_MODEL) | (1L << CP_FOR) | (1L << COMPONENT_NAME))) != 0)) {
					{
					{
					setState(112);
					attribute();
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(118);
				match(CLOSING_TAG);
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(119);
						content();
						}
						} 
					}
					setState(124);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				setState(125);
				match(OPENING_TAG);
				setState(126);
				match(TAG_SLASH);
				setState(127);
				match(COMPONENT_NAME);
				setState(128);
				match(CLOSING_TAG);
				}
				break;
			case 2:
				_localctx = new VoidElementContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(OPENING_TAG);
				setState(130);
				match(COMPONENT_NAME);
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CP_APP) | (1L << CP_SHOW) | (1L << CP_HIDE) | (1L << CP_IF) | (1L << EVENT_LISTENER) | (1L << CP_MODEL) | (1L << CP_FOR) | (1L << COMPONENT_NAME))) != 0)) {
					{
					{
					setState(131);
					attribute();
					}
					}
					setState(136);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(137);
				match(TAG_SLASH);
				setState(138);
				match(CLOSING_TAG);
				}
				break;
			case 3:
				_localctx = new SwitchElementContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				switchE();
				}
				break;
			case 4:
				_localctx = new ScriptletElementContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(140);
				match(SCRIPTLET);
				}
				break;
			case 5:
				_localctx = new ScriptElementContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(141);
				match(SCRIPT_START_TAG);
				setState(142);
				_la = _input.LA(1);
				if ( !(_la==SCRIPT_BODY || _la==SCRIPT_SHORT_BODY) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 6:
				_localctx = new StyleElementContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(143);
				match(STYLE_START_TAG);
				setState(144);
				_la = _input.LA(1);
				if ( !(_la==STYLE_BODY || _la==STYLE_SHORT_BODY) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
